# ChangeLog for dev-ruby/websocket-driver
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*websocket-driver-0.3.1 (04 Dec 2013)

  04 Dec 2013; Hans de Graaff <graaff@gentoo.org>
  +websocket-driver-0.3.1.ebuild, +metadata.xml:
  Initial import. Dependency of dev-ruby/poltergeist.
