@@ -1,1 +1,2 @@
 DIST websocket-driver-0.3.1.gem 17408 SHA256 7645d58f53c64aaa386c3d6e9cf1d65b1fedf1d58f97ed9d5e39d3dbe1b88794 SHA512 41c6b16ed3c383debe194e5b7569a9431072f2d5540206129ec4f6a5c2b5a2df86616098ff3e1d15b9aefa4468335587c0de39559d69b250359e89d4d587d9cf WHIRLPOOL e918701ed9f4ac8017f286f90bf4059dda2257e79b540af50e4af131c2d700e8d7ac1392bc696316ccb2d5ccd2ff2f9ca379e5f7ec871f1c1df7a6497587b3da
+DIST websocket-driver-0.3.2.gem 18432 SHA256 c232ff2c4fd72332e5b8bb5475fd2575ed6aa4462c9d5556c3c5c95073ab7480 SHA512 381f8e5efca363798a48a5936fa3d8267fd9b8599978e069c76664692929068f39a22daffaecaefd87e64367d774ec8a444e05a042317329739ede3a48fb0993 WHIRLPOOL 9e3f7486c0c6607601aef96dbb7b7a4a9216405d0ed0805e8f4653958a14626f587b17fac090de71d3ab6a95b5ca228b605aa83c0297b13f09e3370bdb5689c0
