@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/websocket-driver
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*websocket-driver-0.3.2 (10 Jan 2014)
+
+  10 Jan 2014; Hans de Graaff <graaff@gentoo.org>
+  +websocket-driver-0.3.2.ebuild:
+  Version bump.
 
 *websocket-driver-0.3.1 (04 Dec 2013)
 
